# twainet

./: .gitignore  ProjectHome.md  README.md
src/cpp/: CMakeLists.txt  twainet.plugins  twainet.sln  twainet.trusted  twainet2008.sln  twainet2010.sln  version.h
src/cpp/apps/: CMakeLists.txt
src/cpp/apps/deamon/: CMakeLists.txt  deamon.vcproj  deamon.vcxproj  deamon.vcxproj.filters  twainet.conf  twndeamon  twndeamon.service
src/cpp/apps/deamon/application/: application.cpp  application.h  config.cpp  config.h  configs.cpp  configs.h  main.cpp
src/cpp/apps/deamon/module/: deamon_message.h  deamon_module.cpp  deamon_module.h  google_data_module.cpp  google_data_module.h  module.h
src/cpp/apps/include/: appinterface.h  deamon_message.h  module.h
src/cpp/apps/remote_terminal/: CMakeLists.txt
src/cpp/apps/remote_terminal/application/: application.cpp  application.h  main.cpp
src/cpp/apps/remote_terminal/messages/: terminal.proto
src/cpp/apps/remote_terminal/module/: terminal_module.cpp  terminal_module.h
src/cpp/apps/remote_terminal/terminal/: auto_complete_helper.h  commands.cpp  commands.h  console.cpp  console.h  terminal.cpp  terminal.h  terminal_state.cpp  terminal_state.h
src/cpp/apps/tilc/: CMakeLists.txt  example.til  main.cpp  resource.h  types.cpp  types.h
src/cpp/apps/tilc/compiler/: compiler_comment_state.cpp  compiler_comment_state.h  compiler_function_attr_state.cpp  compiler_function_attr_state.h  compiler_function_state.cpp  compiler_function_state.h  compiler_module_state.cpp  compiler_module_state.h  compiler_plugin_app_state.cpp  compiler_plugin_app_state.h  compiler_plugin_state.cpp  compiler_plugin_state.h  compiler_root_state.cpp  compiler_root_state.h  compiler_state.h  compiler_var_state.cpp  compiler_var_state.h  ti_object.h  ti_objects.h  til_compiler.cpp  til_compiler.h  tokenizer.cpp  tokenizer.h
src/cpp/apps/tilc/generator/: application.h.tmpl  generator_manager.cpp  generator_manager.h  interfaces.h  module.h.tmpl  til_generator.cpp  til_generator.h
src/cpp/apps/tilc/resources/: application.cpp.tmpl  application.h.tmpl  module.cpp.tmpl  module.h.tmpl  module.proto.tmpl
src/cpp/common/: ConvertUTF.c  ConvertUTF.h  SimpleIni.h  common.h  common_func.cpp  common_func.h  cpu_id.cpp  dir.cpp  dir.h  file.cpp  guid_generator.cpp  ini_file.cpp  logger.cpp  logger.h  network.cpp  process.cpp  process.h  ref.h  service_manager.cpp  service_manager.h  tstring.cpp  tstring.h  user.cpp  user.h
src/cpp/include/: appinterface.h  client_module_name.h  critical_section.h  data_message.h  deamon_message.h  default_app.h  deserializer.h  module.h  object_manager.h  ref.h  semaphore.h  twainet.h
src/cpp/lib/: CMakeLists.txt
src/cpp/lib/client_server_lib/: CMakeLists.txt  client_server_lib.vcproj  client_server_lib.vcxproj  client_server_lib.vcxproj.filters
src/cpp/lib/client_server_lib/connector/: client_server_connector.cpp  client_server_connector.cpp.bak  client_server_connector.h  client_server_connector.h.bak
src/cpp/lib/client_server_lib/message/: client_server_messages.cpp  client_server_messages.h
src/cpp/lib/client_server_lib/module/: client_server_module.cpp  client_server_module.h  client_server_signal_handler.cpp  client_server_signal_handler.h
src/cpp/lib/connector_lib/: CMakeLists.txt  connector_lib.vcproj  connector_lib.vcxproj  connector_lib.vcxproj.filters
src/cpp/lib/connector_lib/common/: aes.cpp  aes.h
src/cpp/lib/connector_lib/connector/: connector.cpp  connector.h  connector_factory.h  connector_manager.cpp  connector_manager.h
src/cpp/lib/connector_lib/handler/: data_handler.h  data_message.h  message_handler.cpp  message_handler.h  sender.h
src/cpp/lib/connector_lib/message/: connector_messages.cpp  connector_messages.h
src/cpp/lib/connector_lib/ppp/: ppp_library.cpp  ppp_library.h
src/cpp/lib/connector_lib/signal/: signal.cpp  signal.h  signal_manager.cpp  signal_manager.h  signal_message.h  signal_owner.cpp  signal_owner.h  signal_receiver.cpp  signal_receiver.h
src/cpp/lib/connector_lib/socket/: any_socket.h  ppp_socket.cpp  ppp_socket.h  proxy_socket.cpp  proxy_socket.h  secure_socket.cpp  secure_socket.cpp.bak  secure_socket.h  socket_factories.cpp  socket_factories.h  socket_factory.h  tcp_socket.cpp  tcp_socket.h  (+4 more)
src/cpp/lib/ipc_lib/: CMakeLists.txt  ipc_lib.vcproj  ipc_lib.vcxproj  ipc_lib.vcxproj.filters
src/cpp/lib/thread_lib/: CMakeLists.txt  thread_lib.vcproj  thread_lib.vcxproj  thread_lib.vcxproj.filters
src/cpp/lib/tunnel_lib/: CMakeLists.txt  tunnel_lib.vcproj  tunnel_lib.vcxproj  tunnel_lib.vcxproj.filters
src/cpp/lib/twainet/: CMakeLists.txt  resource.h  twainet.rc  twainet.vcproj  twainet.vcxproj  twainet.vcxproj.filters
src/cpp/libppp/: libppp.h  libppp.vcxproj  libppp.vcxproj.filters
src/cpp/libppp/application/: application.cpp  application.h  dllmain.cpp  ethernet_monitor.cpp  ethernet_monitor.h  libppp.h  ppp_connection.cpp
src/cpp/libppp/common/: net_structs.h
src/cpp/libppp/net/: ethernet_header.cpp  ethernet_header.h  inet_headers.cpp  inet_headers.h  parser_states.cpp  parser_states.h  ppp_lcp_headers.cpp  ppp_lcp_headers.h  pppoe_headers.cpp  pppoe_headers.h
src/cpp/libppp/parser/: net_packet.h  parser_states.cpp  parser_states.h
src/cpp/libppp/ppp/: ppp_connection.cpp  ppp_connection.h  pppoe_connection.cpp  pppoe_connection.h  pppoed_connection.cpp  pppoed_connection.h
src/cpp/libppp/socket/: ppp_socket.cpp  ppp_socket.h
src/cpp/test/: Application.cpp  Application.h  CMakeLists.txt  stdafx.h  test.cpp  test.vcproj  test.vcxproj  test.vcxproj.filters  test_module.cpp  test_module.h
src/cpp/twainet/: CMakeLists.txt  resource.h  twainet.rc  twainet.vcproj  twainet.vcxproj  twainet.vcxproj.filters
src/cpp/twainet/application/: application.cpp  application.h  dllmain.cpp  twainet.cpp  twainet.h
src/cpp/twainet/message/: NotificationMessages.cpp  NotificationMessages.h
src/cpp/twainet/module/: twainet_module.cpp  twainet_module.h
src/cpp/utils/: ConvertUTF.c  base64.cpp  base64.h  logger.cpp  logger.h  path_parser.cpp  utils.cpp  utils.h
(+365 files in other folders)
